fixed videodl on linux #78